--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "bin": {
     "foast": "./dist/src/cli.js"
   },
-  "files": [ "dist/**/*" ],
+  "files": [
+    "dist/**/*"
+  ],
   "scripts": {
     "test": "c8 node --import ./tsnode-esm.mjs --test test/**/*.test.ts",
     "oas:lint": "npx @redocly/cli lint examples/blog/openapi/openapi.yaml",
@@ -56,7 +58,7 @@
     "prepublish": "node pjClean.mjs -d .",
     "postpublish": "node pjRestore.mjs",
     "prepare": "husky",
-    "test1": "node test.mjs"
+    "commitlint": "commitlint --edit"
   },
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^12.0.1",
@@ -65,6 +67,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
     "@sinclair/typebox": "^0.34.24",
     "@types/node": "^22.13.4",
     "c8": "^10.1.3",
@@ -75,5 +79,10 @@
   },
   "lint-staged": {
     "*.{js,ts,mjs,mts}": "npm run format && npm run lint"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   }
 }
