--- a/biome.json
+++ b/biome.json
@@ -1,9 +1,22 @@
 {
 	"$schema": "node_modules/@biomejs/biome/configuration_schema.json",
 	"files": {
-		"ignore": [".devcontainer", "dist", "notes", "coverage", ".private", "test/fixtures"],
+		"ignore": [
+			".devcontainer",
+			"dist",
+			"notes",
+			"coverage",
+			".private",
+			"test/fixtures"
+		],
 		"ignoreUnknown": true,
-		"include": ["src", "examples", "test", "dist"]
+		"include": [
+			"src",
+			"examples",
+			"test",
+			"dist",
+			"/workspace/*.?js"
+		]
 	},
 	"linter": {
 		"enabled": true,
