--- a/biome.json
+++ b/biome.json
@@ -3,20 +3,19 @@
 	"files": {
 		"ignore": [
 			".devcontainer",
+			".github",
+			".husky",
+			".private",
+			".vscode",
+			"bruno",
+			"coverage",
 			"dist",
 			"notes",
-			"coverage",
-			".private",
+			"docs",
+			"node_modules",
 			"test/fixtures"
 		],
-		"ignoreUnknown": true,
-		"include": [
-			"src",
-			"examples",
-			"test",
-			"dist",
-			"/workspace/*.?js"
-		]
+		"ignoreUnknown": true
 	},
 	"linter": {
 		"enabled": true,
@@ -60,24 +59,18 @@
 			"quoteProperties": "asNeeded",
 			"trailingCommas": "all",
 			"semicolons": "always",
-			"arrowParentheses": "always",
-			"enabled": true,
-			"indentStyle": "tab",
-			"indentWidth": 3,
-			"lineEnding": "lf",
-			"lineWidth": 120
+			"arrowParentheses": "always"
 		}
 	},
 	"json": {
 		"parser": {
 			"allowTrailingCommas": false
-		},
-		"formatter": {
-			"enabled": true,
-			"indentStyle": "tab",
-			"indentWidth": 3,
-			"lineEnding": "lf",
-			"lineWidth": 120
 		}
+	},
+	"vcs": {
+		"enabled": true,
+		"clientKind": "git",
+		"useIgnoreFile": true,
+		"defaultBranch": "main"
 	}
 }
