chore: config for js import extension

--- a/config_ref.json
+++ b/config_ref.json
@@ -14,7 +14,7 @@
 		"derefFl": false,
 		"prefixTx": "",
 		"suffixTx": "RouteOptions",
-		"importExtensionTx": "ts",
+		"importExtensionTx": "js",
 		"extensionTx": "ts",
 		"noAdditionalProperties": true
 	}
