refactor: config import ext for both commands

--- a/config_ref.json
+++ b/config_ref.json
@@ -8,6 +8,7 @@
 		"typePrefixTx": "",
 		"typeSuffixTx": "",
 		"derefFl": false,
+		"importExtensionTx": "js",
 		"extensionTx": "ts"
 	},
 	"oas2ro": {
