fix: adjust base configs for consistent names

--- a/config_deref.json
+++ b/config_deref.json
@@ -8,7 +8,7 @@
 		"typePrefixTx": "",
 		"typeSuffixTx": "",
 		"derefFl": true,
-		"extensionTx": "ts"
+		"importExtensionTx": "ts"
 	},
 	"oas2ro": {
 		"derefFl": true,
