--- a/config_ref.json
+++ b/config_ref.json
@@ -8,8 +8,7 @@
 		"typePrefixTx": "",
 		"typeSuffixTx": "",
 		"derefFl": false,
-		"importExtensionTx": "js",
-		"extensionTx": "ts"
+		"importExtensionTx": "js"
 	},
 	"oas2ro": {
 		"derefFl": false,
