--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-	"name": "@jmjf/foast",
+	"name": "@jmjf/to4ft",
 	"type": "module",
 	"version": "1.1.0",
 	"description": "",
 	"author": "jmjf (https://github.com/jmjf)",
 	"license": "MIT",
-	"repository": "https://github.com/jmjf/foast",
-	"homepage": "https://github.com/jmjf/foast#readme",
+	"repository": "https://github.com/jmjf/to4ft",
+	"homepage": "https://github.com/jmjf/to4ft#readme",
 	"keywords": ["cli", "openapi", "oas", "fastify", "typebox", "code generator", "typescript"],
 	"main": "dist/src/cli.js",
 	"bin": {
-		"foast": "./dist/src/cli.js"
+		"to4ft": "./dist/src/cli.js"
 	},
 	"files": ["dist/**/*"],
 	"scripts": {
@@ -55,7 +55,7 @@
 	},
 	"dependencies": {
 		"@apidevtools/json-schema-ref-parser": "^12.0.1",
-		"commander": "^13.1.0",
+		"commander": "^14.0.0",
 		"openapi-types": "^12.1.3"
 	},
 	"devDependencies": {
