--- a/examples/blog/openapi/components/User.yaml
+++ b/examples/blog/openapi/components/User.yaml
@@ -57,7 +57,74 @@ components:
             type: string
             minLength: 1
             description: an inline property
+    ObjectQuery:
+      in: query
+      name: objectQuery
+      description: >
+        This query parameter is based on an object schema. The goal is for it to be flattened,
+        not treated as an object in the query parameters in RouteOptions.
+
+
+        This query and AllOfQuery deal with cases where query parameters may need to exist as
+        a separate schema so they can be used elsewhere -- for example, when saving a user's default
+        query to preserve it across logins.
+
+      schema:
+        $ref: '#/components/schemas/ObjectForQuery' 
+    AllOfQuery:
+      in: query
+      name: allOfQuery
+      description: >
+        a query using all of, which includes a sub-object
+
+
+        This tests a case where query parameters get difficult for ref-maintaining RouteOptions.
+        Original RO code generates an object parameter, which doesn't play nice with query parsing.
+        
+        
+        The goal is to get the code to flatten the allOf or to get the code to properly flatten The
+        query parameters where one is from a schema object.
+      schema:
+        allOf:
+          - $ref: '#/components/schemas/ObjectForQuery'
+          - type: object
+            properties:
+              s2Prop1:
+                type: boolean
+              s2Prop2:
+                type: string
+                format: date
+    AllOfOneOfQuery:
+      in: query
+      name: allOfOneOfQuery
+      description: >
+        a query using all of with a nested oneOf
+      schema:
+        allOf:
+          - type: object
+            properties:
+              s2Prop1:
+                type: boolean
+              s2Prop2:
+                type: string
+                format: date                
+          - oneOf:
+            - $ref: '#/components/schemas/ObjectForQuery'
+            - $ref: Fields.yaml#/components/schemas/UserId
+            - type: object
+              properties:
+                oneOfProp1:
+                  type: string
+                oneOfProp2:
+                  type: number
   schemas:
+    ObjectForQuery:
+      type: object
+      properties:
+        s1Prop1:
+          type: string
+        s1Prop2:
+          $ref: Fields.yaml#/components/schemas/GenericDt
     User:
       title: User
       type: object
@@ -92,6 +159,7 @@ components:
     x𒐗:
       title: cuneiform
       type: number
+    
   responses:
     UsersResponse:
       description: An array of users
