feat: add config `addDateFl`

--- a/config_deref.json
+++ b/config_deref.json
@@ -9,7 +9,8 @@
 		"typeSuffixTx": "",
 		"derefFl": true,
 		"importExtensionTx": "ts",
-		"extensionTx": "ts"
+		"extensionTx": "ts",
+		"addDateFl": true
 	},
 	"oas2ro": {
 		"derefFl": true,
