--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
 		"lint:staged": "npx @biomejs/biome check --no-errors-on-unmatched --staged",
 		"build": "rm -rf dist && npx tsc -p tsconfig-build.json",
 		"postbuild": "node pjClean.mjs -d dist && chmod a+x ./dist/src/cli.js",
-		"prepublishOnly": "node pjClean.mjs -d .",
+		"prepublishOnly": "npm run build && node pjClean.mjs -d .",
 		"postpublish": "node pjRestore.mjs",
 		"prepare": "husky",
 		"version": "npm run format",
