--- a/config_ref.json
+++ b/config_ref.json
@@ -8,14 +8,14 @@
 		"typePrefixTx": "",
 		"typeSuffixTx": "",
 		"derefFl": false,
-		"importExtensionTx": "js",
+		"importExtensionTx": "ts",
 		"extensionTx": "ts"
 	},
 	"oas2ro": {
 		"derefFl": false,
 		"prefixTx": "",
 		"suffixTx": "RouteOptions",
-		"importExtensionTx": "js",
+		"importExtensionTx": "ts",
 		"extensionTx": "ts",
 		"noAdditionalProperties": true
 	}
