fix(setup): add test example; scripts for it

--- a/package.json
+++ b/package.json
@@ -37,6 +37,11 @@
 		"petstore:rod": "node --experimental-strip-types src/cli.ts oas2ro -i examples/petstore/openapi/openapi.yaml -o examples/petstore/rod --refDir examples/petstore/tbd -c config_deref.json && npm run check:ex",
 		"petstore:ror": "node --experimental-strip-types src/cli.ts oas2ro -i examples/petstore/openapi/openapi.yaml -o examples/petstore/ror --refDir examples/petstore/tbr -c config_ref.json && npm run check:ex",
 		"petstore:all": "npm run petstore:tbd && npm run petstore:tbr && npm run petstore:rod && npm run petstore:ror && npm run check:ex",
+		"extest:tbd": "node --experimental-strip-types src/cli.ts oas2tb -i examples/test/openapi/openapi.yaml -o examples/test/tbd -c config_deref.json && npm run check:ex",
+		"extest:tbr": "node --experimental-strip-types src/cli.ts oas2tb -i examples/test/openapi/openapi.yaml -o examples/test/tbr -c config_ref.json && npm run check:ex",
+		"extest:rod": "node --experimental-strip-types src/cli.ts oas2ro -i examples/test/openapi/openapi.yaml -o examples/test/rod --refDir examples/test/tbd -c config_deref.json && npm run check:ex",
+		"extest:ror": "node --experimental-strip-types src/cli.ts oas2ro -i examples/test/openapi/openapi.yaml -o examples/test/ror --refDir examples/test/tbr -c config_ref.json && npm run check:ex",
+		"extest:all": "npm run extest:tbd && npm run extest:tbr && npm run extest:rod && npm run extest:ror && npm run check:ex",
 		"all:all": "npm run blog:all && npm run train:all && npm run museum:all && npm run petstore:all",
 		"check:ex": "npx @biomejs/biome check --write examples",
 		"format": "npx @biomejs/biome check --write --linter-enabled=false",
