--- a/test/fixtures/pathItem.yaml
+++ b/test/fixtures/pathItem.yaml
@@ -1,13 +1,13 @@
 parameters:
-  - $ref: './testapi.yaml#/components/parameters/XTestHeaderParam'
+  - $ref: './openapi.yaml#/components/parameters/XTestHeaderParam'
 get:
   operationId: testPathLevelParams
   security: []
   summary: test parameters defined above operations
   parameters:
-    - $ref: './testapi.yaml#/components/parameters/UserQuery'
+    - $ref: './openapi.yaml#/components/parameters/UserQuery'
   responses:
     '200':
-      $ref: './testapi.yaml#/components/responses/GetUsersByQuery200Response'
+      $ref: './openapi.yaml#/components/responses/GetUsersByQuery200Response'
     4xx:
       description: error
