--- a/package.json
+++ b/package.json
@@ -7,12 +7,22 @@
 	"license": "MIT",
 	"repository": "https://github.com/jmjf/to4ft",
 	"homepage": "https://github.com/jmjf/to4ft#readme",
-	"keywords": ["cli", "openapi", "oas", "fastify", "typebox", "code generator", "typescript"],
+	"keywords": [
+		"cli",
+		"openapi",
+		"oas",
+		"fastify",
+		"typebox",
+		"code generator",
+		"typescript"
+	],
 	"main": "dist/src/cli.js",
 	"bin": {
 		"to4ft": "./dist/src/cli.js"
 	},
-	"files": ["dist/**/*"],
+	"files": [
+		"dist/**/*"
+	],
 	"scripts": {
 		"test": "c8 node --import ./tsnode-esm.mjs --test test/**/*.test.ts",
 		"oas:lint": "npx @redocly/cli lint examples/blog/openapi/openapi.yaml",
@@ -59,12 +69,12 @@
 		"commitlint": "commitlint --edit"
 	},
 	"dependencies": {
-		"@apidevtools/json-schema-ref-parser": "^13.0.4",
+		"@apidevtools/json-schema-ref-parser": "^14.0.2",
 		"commander": "^14.0.0",
 		"openapi-types": "^12.1.3"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.9.4",
+		"@biomejs/biome": "^2.0.0",
 		"@commitlint/cli": "^19.8.1",
 		"@commitlint/config-conventional": "^19.8.1",
 		"@sinclair/typebox": "^0.34.24",
@@ -75,6 +85,8 @@
 		"typescript": "^5.7.3"
 	},
 	"commitlint": {
-		"extends": ["@commitlint/config-conventional"]
+		"extends": [
+			"@commitlint/config-conventional"
+		]
 	}
 }
