--- a/biome.json
+++ b/biome.json
@@ -14,7 +14,7 @@
 			"!**/notes",
 			"!**/docs",
 			"!**/node_modules",
-			"!**/test/fixtures"
+			"!**/test/fixtures/**"
 		],
 		"ignoreUnknown": true
 	},
