feat: add outTypeCd config

--- a/config_ref.json
+++ b/config_ref.json
@@ -17,6 +17,7 @@
 		"suffixTx": "RouteOptions",
 		"importExtensionTx": "ts",
 		"extensionTx": "ts",
-		"noAdditionalProperties": true
+		"noAdditionalProperties": true,
+		"outTypeCd": "TBREF"
 	}
 }
