feat: (wip) generate TBDEREF for request bodies and responses

--- a/package.json
+++ b/package.json
@@ -49,9 +49,10 @@
 		"petstore:all": "npm run petstore:tbd && npm run petstore:tbr && npm run petstore:rod && npm run petstore:ror && npm run check:ex",
 		"extest:tbd": "node --experimental-strip-types src/cli.ts oas2tb -i examples/test/openapi/openapi.yaml -o examples/test/tbd -c config_deref.json && npm run check:ex",
 		"extest:tbr": "node --experimental-strip-types src/cli.ts oas2tb -i examples/test/openapi/openapi.yaml -o examples/test/tbr -c config_ref.json && npm run check:ex",
-		"extest:rod": "node --experimental-strip-types src/cli.ts oas2ro -i examples/test/openapi/openapi.yaml -o examples/test/rod-json --refDir examples/test/tbd -c config_deref.json && npm run check:ex",
+		"extest:rod-json": "node --experimental-strip-types src/cli.ts oas2ro -i examples/test/openapi/openapi.yaml -o examples/test/rod-json --refDir examples/test/tbd -c config_deref.json && npm run check:ex",
+		"extest:rod-tb": "node --experimental-strip-types src/cli.ts oas2ro -i examples/test/openapi/openapi.yaml -o examples/test/rod-tb --refDir examples/test/tbd -c config_tbderef.json && npm run check:ex",
 		"extest:ror": "node --experimental-strip-types src/cli.ts oas2ro -i examples/test/openapi/openapi.yaml -o examples/test/ror-tb --refDir examples/test/tbr -c config_ref.json && npm run check:ex",
-		"extest:all": "npm run extest:tbd && npm run extest:tbr && npm run extest:rod && npm run extest:ror && npm run check:ex",
+		"extest:all": "npm run extest:tbd && npm run extest:tbr && npm run extest:rod-json && extest:rod-tb && npm run extest:ror && npm run check:ex",
 		"all:all": "npm run blog:all && npm run train:all && npm run museum:all && npm run petstore:all",
 		"check:ex": "npx @biomejs/biome check --write examples",
 		"format": "npx @biomejs/biome check --write --linter-enabled=false",
@@ -59,6 +60,7 @@
 		"lint:only": "npx @biomejs/biome lint",
 		"lint:typecheck": "npx tsc -p tsconfig.json --noemit",
 		"lint:staged": "npx @biomejs/biome check --no-errors-on-unmatched --staged",
+		"clean": "npm run format && npm run lint",
 		"build": "rm -rf dist && npx tsc -p tsconfig-build.json",
 		"postbuild": "node pjClean.mjs -d dist && chmod a+x ./dist/src/cli.js",
 		"prepublishOnly": "npm run build && node pjClean.mjs -d .",
