chore: remove ts-node-maintained in favor of type stripping officially; biome ignore html

--- a/biome.json
+++ b/biome.json
@@ -14,7 +14,8 @@
 			"!**/notes",
 			"!**/docs",
 			"!**/node_modules",
-			"!**/test/fixtures"
+			"!**/test/fixtures",
+			"!!**/*.html"
 		],
 		"ignoreUnknown": true
 	},
